# Arquitectura-Software-Robots

./: .gitignore  README.md
Practica1/: README.md
Practica2/: README.md
Practica2/src/teleop_bumper_kobuki/: CMakeLists.txt  package.xml
Practica2/src/teleop_bumper_kobuki/include/teleop_bumper_kobuki/: SubscriberBumperNode.hpp
Practica2/src/teleop_bumper_kobuki/src/: subscriber_bumper_main.cpp
Practica2/src/teleop_bumper_kobuki/src/teleop_bumper_kobuki/: SubscriberBumperNode.cpp
Practica3/: README.md
Practica3/src/practica3/: CMakeLists.txt  package.xml
Practica3/src/practica3/config/: params.yaml
Practica3/src/practica3/include/practica3/: Detection2DNode.hpp  Detection3DNode.hpp  NearestObstacleDetectorNode.hpp  OrientationControlNode.hpp
Practica3/src/practica3/launch/: detection_2d.launch.py  detection_3d.launch.py  nearest_obstacle_dectector.launch.py  orientation_control.launch.py
Practica3/src/practica3/src/: detection_2d_main.cpp  detection_3d_main.cpp  nearest_obstacle_detector_main.cpp  orientation_control_main.cpp
Practica3/src/practica3/src/practica3/: Detection2DNode.cpp  Detection3DNode.cpp  NearestObstacleDetectorNode.cpp  OrientationControlNode.cpp  PIDController.cpp
Practica4/: README.md
Practica4/src/practica4/: CMakeLists.txt  package.xml
Practica4/src/practica4/config/: params.yaml
Practica4/src/practica4/include/practica4/: PatrollingRobotNode.hpp  navigation_client.hpp
Practica4/src/practica4/include/practica4/states/: IdleState.hpp  MovingState.hpp  State.hpp  StateMachine.hpp  StoppedState.hpp
Practica4/src/practica4/launch/: patrolling_robot_node.launch.py
Practica4/src/practica4/src/: patrolling_robot_node_main.cpp
Practica4/src/practica4/src/practica4/: PatrollingRobotNode.cpp  navigation_client.cpp
Practica4/src/practica4/src/practica4/states/: IdleState.cpp  MovingState.cpp  StateMachine.cpp  StoppedState.cpp
Practica5/: README.md
Practica5/src/practica5/: CMakeLists.txt  package.xml
Practica5/src/practica5/config/: params.yaml  practica5_tree.xml
Practica5/src/practica5/include/practica5/: PersonDetection.hpp  text_utils.hpp
Practica5/src/practica5/include/practica5/bt_nodes/: IsPersonDetected.hpp  abort_mission_action.hpp  backup_action.hpp  bt_node_registration.hpp  extract_info_action.hpp  extract_info_client_action.hpp  has_goal_condition.hpp  is_battery_low_condition.hpp  is_obstacle_near_condition.hpp  listen_text_action.hpp  listen_text_client_action.hpp  move_forward_action.hpp  move_towards_goal_action.hpp  return_to_charger_action.hpp  say_text_action.hpp  say_text_client_action.hpp  spin_action.hpp  wait_action.hpp
Practica5/src/practica5/launch/: practica5.launch.py
Practica5/src/practica5/src/: bt_main.cpp  person_detection_main.cpp
Practica5/src/practica5/src/practica5/: PersonDetection.cpp  text_utils.cpp
Practica5/src/practica5/src/practica5/bt_nodes/: IsPersonDetected.cpp  abort_mission_action.cpp  backup_action.cpp  bt_node_registration.cpp  extract_info_action.cpp  extract_info_client_action.cpp  has_goal_condition.cpp  is_battery_low_condition.cpp  is_obstacle_near_condition.cpp  listen_text_action.cpp  listen_text_client_action.cpp  move_forward_action.cpp  move_towards_goal_action.cpp  return_to_charger_action.cpp  say_text_action.cpp  say_text_client_action.cpp  spin_action.cpp  wait_action.cpp
