<?xml version="1.0"?>
<package format="3">

    <name>teleop_bumper_kobuki</name>
    <version>0.1.0</version>
    <description>Teleoperation of Kobuki using bumper events</description>

    <maintainer email="re.marquez.2024@alumnos.urjc.es">Rafael Márquez</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>kobuki_ros_interfaces</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
